--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^18.0.15",
     "@types/react-native": "^0.69.3",
+    "lottie-react-native": "^5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-document-picker": "^8.1.1",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-modal": "^13.0.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
