--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^18.0.15",
     "@types/react-native": "^0.69.3",
+    "date-fns": "^2.29.1",
     "lottie-react-native": "^5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.1",
